# AnimalFarmBot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  KeepAlive.py  LICENSE  Package.resolved  Package.swift  Pipfile  Procfile  README.md  docker-compose.yml  fly.toml  heroku.yml  main.py
SignBunny/: BunnyBuilder.py  main.py
Sources/AnimalFarm/: AnimalFarm.swift  Message.swift
Sources/AnimalFarm/Animal/: Animal.swift  AnimalBuilder.swift  Animals.swift
Sources/AnimalFarm/Animals/: Animal.swift
Sources/AnimalFarm/Bubble/: Bubble.swift  BubbleBuilder.swift  Bubbles.swift  SpeechBubble.swift
Sources/AnimalFarm/Builders/: Animal.swift  AnimalBuilder.swift  SignBuilder.swift
Sources/AnimalFarm/Commands/: Animals.swift  DynamicUtil.swift  Events.swift  Hidden.swift  StaticUtil.swift  Stats.swift  Util.swift
Sources/AnimalFarm/Full/: AnimalFarm.swift  Message.swift
Sources/AnimalFarm/Setup/: Bot.swift  Logger+Log.swift  SecretNames.swift  Shield+AddCommands.swift  main.swift
Sources/AnimalFarmDiscord/Commands/: Animals.swift  Events.swift  Stats.swift  Util.swift
Sources/AnimalFarmDiscord/Setup/: Bot.swift  Logger+Log.swift  (+2 more)
Sources/Sign-Bunny-Bot/: Animals.swift  BunnyBuilder.swift  SignBuilder.swift  main.swift
Tests/: LinuxMain.swift
Tests/Sign-Bunny-BotTests/: Sign_Bunny_BotTests.swift  XCTestManifests.swift
src/: events.rs  main.rs
src/commands/: animals.rs  handle.rs  make.rs  meta.rs  mod.rs  owner.rs
src/converter/: animals.rs  bubble.rs  mod.rs
src/generator/: animals.rs  mod.rs  pun.rs
src/slash/: handle.rs  make.rs  mod.rs
(+7 files in other folders)
