[package]
name = "animal_farm"
version = "0.1.0"
authors = ["Liam Rosenfeld <me@liamrosenfeld.com>"]
edition = "2018"

[dependencies]
serenity = "0.9.1"
tokio = { version = "0.2", features = ["macros"] }
dotenv = "0.15"
log = "0.4.11"
rand = "0.7"
reqwest = { version = "*", default-features = false, features = ["rustls-tls"] }
