[package]
name = "animal_farm"
version = "0.2.0"
authors = ["Liam Rosenfeld <me@liamrosenfeld.com>"]
edition = "2018"

[dependencies]
serenity = { version = "0.10", default-features = true, features = ["unstable_discord_api"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
log = "0.4.11"
rand = "0.7"
reqwest = { version = "*", default-features = false, features = ["rustls-tls"] }
