[package]
name = "animal_farm"
version = "0.2.0"
authors = ["Liam Rosenfeld <me@liamrosenfeld.com>"]
edition = "2021"

[dependencies]
dotenv = "0.15"
log = "0.4"
rand = "0.8"

[dependencies.serenity]
version = "0.11"
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
    "unstable_discord_api"
]

[dependencies.tokio]
version = "1.25"
features = ["macros", "rt-multi-thread"]

[dependencies.reqwest]
version = "*"
default-features = false
features = ["rustls-tls"]
